--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <dialog>
+        <button class="close-modal">Close</button>
+        <form class="book-form">
+            <div class="form-control">
+                <label for="author">Author's Name</label>
+                <input type="text" id="author" name="author">
+            </div>
+            <div class="form-control">
+                <label for="title">Book's Title</label>
+                <input type="text" id="title" name="title">
+            </div>
+            <div class="form-control">
+                <label for="number-of-page">Number of Page</label>
+                <input type="number" id="number-of-page" name="number-of-page">
+            </div>
+            <div class="form-control">
+                <span >Have you already read it?</span>
+                <label for="read-status-yes">yes</label>
+                <input type="radio" id="read-status-yes" name="read-status" value="yes" >
+                <label for="read-status-no">no</label>
+                <input type="radio" id="read-status-no" name="read-status" value="no" checked>
+            </div>
+            <button class="button" type=submit>Submit</button>
+        </form>
+    </dialog>
+    <button class="display-modal">Show Modal</button>
     <script defer src="./js/index.js"></script>
 </body>
 </html>
