--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <div>
+        <h1>Library</h1>
+        <div class="library-container">
+
+        </div>
+    </div>
     <dialog>
         <button class="close-modal">Close</button>
         <form class="book-form">
@@ -25,9 +31,9 @@
             <div class="form-control">
                 <span >Have you already read it?</span>
                 <label for="read-status-yes">yes</label>
-                <input type="radio" id="read-status-yes" name="read-status" value="yes" >
+                <input type="radio" id="read-status-yes" name="read-status" value="read" >
                 <label for="read-status-no">no</label>
-                <input type="radio" id="read-status-no" name="read-status" value="no" checked>
+                <input type="radio" id="read-status-no" name="read-status" value="not read" checked>
             </div>
             <button class="button" type=submit>Submit</button>
         </form>
