add a class name of container to the parent div of library header and library container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/modern-normalize.css">
 </head>
 <body>
-    <div>
+    <div class="container">
         <div class="library-header">
             <h1>Library</h1>
             <button class="display-modal">New Book</button>
