--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                         <div class="form-control-container">
                             <div class="form-control">
                                 <label for="title">Book's Title:</label>
-                                <input type="text" id="title" name="title">
+                                <input type="text" id="title" name="title" required>
                             </div>
                             <div class="form-control">
                                 <label for="author">Author's Name:</label>
-                                <input type="text" id="author" name="author">
+                                <input type="text" id="author" name="author" required>
                             </div>
 
                             <div class="form-control">
                                 <label for="number-of-page">Number of Page:</label>
-                                <input type="number" id="number-of-page" name="numberOfPage">
+                                <input type="number" id="number-of-page" pattern="/d{1,10000}" name="numberOfPage" required>
                             </div>
                             <div class="form-control">
                                 <p >Have you already read it?</p>
