add maxlength attribute to input type text

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                         <div class="form-control-container">
                             <div class="form-control">
                                 <label for="title">Book's Title:</label>
-                                <input type="text" id="title" name="title" required>
+                                <input type="text" id="title" name="title" maxlength="1000" required>
                             </div>
                             <div class="form-control">
                                 <label for="author">Author's Name:</label>
-                                <input type="text" id="author" name="author" required>
+                                <input type="text" id="author" name="author" maxlength="1000" required>
                             </div>
 
                             <div class="form-control">
